--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,13 +15,13 @@ jobs:
   test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    
+
     # Run bazel test in each workspace
     strategy:
       matrix:
-          folder:
-              - '.'
-              - 'e2e/workspace'
+        folder:
+          - "."
+          - "e2e/workspace"
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
