--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,15 +1,7 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
-load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
+load("@npm//:defs.bzl", "npm_link_all_packages")
 
-gazelle_binary(
-    name = "gazelle_bin",
-    languages = ["@bazel_skylib//gazelle/bzl"],
-)
-
-gazelle(
-    name = "gazelle",
-    gazelle = "gazelle_bin",
-)
+npm_link_all_packages(name = "node_modules")
 
 bzl_library(
     name = "internal_deps",
