clear warnings from running google-java-format on jdk 11
see https://github.com/google/google-java-format/commit/13ca73ebbfa86f6aca5f86be16e6829de6d5014c

--- a/fmt/BUILD.bazel
+++ b/fmt/BUILD.bazel
@@ -20,6 +20,13 @@ prettier.prettier_binary(
 
 java_binary(
     name = "java-format",
+    jvm_flags = [
+        "--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+    ],
     main_class = "com.google.googlejavaformat.java.Main",
     runtime_deps = ["@google-java-format//jar"],
 )
