--- a/e2e/workspace/.bazelrc
+++ b/e2e/workspace/.bazelrc
@@ -1,2 +1,3 @@
 build --@aspect_rules_format//format:java_enabled=false
 build --@aspect_rules_format//format:swift_enabled=false
+build --@aspect_rules_format//format:python_enabled=false
