--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,16 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base"]
+
+  "extends": [
+      "config:base",
+      ":preserveSemverRanges",
+      ":rebaseStalePrs",
+      "schedule:weekly",
+      "group:recommended",
+      "group:monorepos",
+      "workarounds:all"
+  ],
+
+  "labels": ["deps"],
+  "dependencyDashboard": true
 }
