--- a/format/BUILD.bazel
+++ b/format/BUILD.bazel
@@ -61,6 +61,15 @@ alias(
     }),
 )
 
+alias(
+    name = "terraform",
+    actual = select({
+        "@bazel_tools//src/conditions:linux": "@terraform_linux_x86_64//:terraform",
+        "@bazel_tools//src/conditions:darwin_arm64": "@terraform_macos_aarch64//:terraform",
+        "@bazel_tools//src/conditions:darwin_x86_64": "@terraform_macos_x86_64//:terraform",
+    }),
+)
+
 [
     bool_flag(
         name = s + "_enabled",
@@ -106,6 +115,11 @@ sh_binary(
     ) + select(
         {
             ":format_proto": [":buf"],
+            "//conditions:default": [],
+        },
+    ) + select(
+        {
+            ":format_terraform": [":terraform"],
             "//conditions:default": [],
         },
     ),
