feat: opt-in to languages rather than opt-out
BREAKING CHANGE:
Users must check their .bazelrc to include languages they use, or else these will be silently dropped.

This will scale better as we add more languages to the formatter, so we don't slow down pre-commit in a way users don't easily override

--- a/format/BUILD.bazel
+++ b/format/BUILD.bazel
@@ -73,7 +73,7 @@ alias(
 [
     bool_flag(
         name = s + "_enabled",
-        build_setting_default = True,
+        build_setting_default = False,
     )
     for s in LANGS
 ]
