fix: List Go as a language too
Now that users opt-in to the languages they use, it's confusing that Go isn't included in the list.

--- a/format/BUILD.bazel
+++ b/format/BUILD.bazel
@@ -96,10 +96,12 @@ sh_binary(
     data = [
         ":buildifier",
         ":prettier",
-        # We can't make this optional, because it's an eager fetch as soon as this
-        # label appears anywhere in this file.
-        "@go_sdk//:bin/gofmt",
     ] + select(
+        {
+            ":format_go": ["@go_sdk//:bin/gofmt"],
+            "//conditions:default": [],
+        },
+    ) + select(
         {
             ":format_java": [":java-format"],
             "//conditions:default": [],
