Update prettier, prettier-* to latest versions
2.7.X release of prettier can fail with
`Unknown TypeScript node type: "TSSatisfiesExpression"`

Which is fixed by the 2.8.X, see
https://prettier.io/blog/2022/11/23/2.8.0.html

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
-    "prettier": "*",
-    "prettier-plugin-sh": "*",
-    "prettier-plugin-sql": "*"
+    "prettier": "^2.8.7",
+    "prettier-plugin-sh": "^0.12.8",
+    "prettier-plugin-sql": "^0.14.0"
   },
   "pnpm": {
     "packageExtensions": {
