--- a/format/BUILD.bazel
+++ b/format/BUILD.bazel
@@ -72,6 +72,16 @@ alias(
     }),
 )
 
+alias(
+    name = "jsonnet",
+    actual = select({
+        "@bazel_tools//src/conditions:linux_x86_64": "@jsonnet_linux_x86_64//:jsonnetfmt",
+        "@bazel_tools//src/conditions:linux_aarch64": "@jsonnet_linux_aarch64//:jsonnetfmt",
+        "@bazel_tools//src/conditions:darwin_arm64": "@jsonnet_macos_aarch64//:jsonnetfmt",
+        "@bazel_tools//src/conditions:darwin_x86_64": "@jsonnet_macos_x86_64//:jsonnetfmt",
+    }),
+)
+
 [
     bool_flag(
         name = s + "_enabled",
@@ -124,6 +134,11 @@ sh_binary(
     ) + select(
         {
             ":format_terraform": [":terraform"],
+            "//conditions:default": [],
+        },
+    ) + select(
+        {
+            ":format_jsonnet": [":jsonnet"],
             "//conditions:default": [],
         },
     ),
