--- a/format/BUILD.bazel
+++ b/format/BUILD.bazel
@@ -1,6 +1,7 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
 load("@aspect_rules_format_npm//:prettier/package_json.bzl", prettier = "bin")
+load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
 load(":langs.bzl", "LANGS")
 
 exports_files(["langs.bzl"])
@@ -80,10 +81,9 @@ java_binary(
     ],
 )
 
-alias(
+py_console_script_binary(
     name = "black",
-    # Don't use the requirements.bzl#entry_point helper as that makes an eager load
-    actual = "@aspect_rules_format_pypi_black//:rules_python_wheel_entry_point_black",
+    pkg = "@pip//black",
 )
 
 alias(
