--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,6 +1,8 @@
 module(
     name = "aspect_rules_format",
     repo_name = "aspect_rules_format",
+    version = "0.0.0",
+    compatibility_level = 1,
 )
 
 bazel_dep(name = "bazel_skylib", version = "1.4.2")
