--- a/e2e/workspace/WORKSPACE
+++ b/e2e/workspace/WORKSPACE
@@ -41,17 +41,16 @@ format_register_toolchains()
 
 # If Python formatting is enabled, you'll need to uncomment the following as well.
 #
-# load("@rules_python//python:repositories.bzl", "python_register_toolchains")
+# load("@rules_python//python:pip.bzl", "pip_parse")
+# load("@python3//:defs.bzl", "interpreter")
 #
-# python_register_toolchains(
-#     name = "python3",
-#     python_version = "3.10",
+# pip_parse(
+#     name = "pip",
+#     incompatible_generate_aliases = True,
+#     python_interpreter_target = interpreter,
+#     requirements_lock = "//:requirements_lock.txt",
 # )
 #
-# load("@rules_python//python/pip_install:repositories.bzl", "pip_install_dependencies")
+# load("@pip//:requirements.bzl", "install_deps")
 #
-# pip_install_dependencies()
-#
-# load("@aspect_rules_format//:requirements.bzl", install_black = "install_deps")
-#
-# install_black()
+# install_deps()
